6 урок страница Registration+трансформация и анимация

--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,8 @@
                 <li class="loop"><a href="product.html" target="_blank"><img src="img/loop.svg" alt="loop"></a></li>
             </ul>
             <ul class="iconright">
-                <li class="burger"><a href="index.html"><img src="img/menu.svg" alt="menu"></a>
+                <li class="burger">
+                    <div class="burger_trans"><a href="index.html"><img src="img/menu.svg" alt="menu"></a></div>
                     <div class="mega-box">
                         <div class="mega-item">
                             <h3 class="mega-heading">Menu</h3>
@@ -52,7 +53,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="personal"><a href="index.html"><img src="img/contact.svg" alt="contact"></a></li>
+                <li class="personal"><a href="registration.html"><img src="img/contact.svg" alt="contact"></a></li>
                 <li class="basket"><a href="cart.html" target="_blank"><img src="img/basket.svg" alt="basket"></a></li>
             </ul>
         </nav>
@@ -170,7 +171,7 @@
         <div class="container">
             <div class="card-flex">
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-1.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -180,14 +181,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-7.jpg" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -197,14 +198,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-3.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -214,14 +215,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-4.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -231,14 +232,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-8.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -248,14 +249,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-9.jpg" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -265,14 +266,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-10.jpg" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -282,14 +283,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-11.jpg" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -299,14 +300,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-12.jpg" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -316,7 +317,7 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
