--- a/product.html
+++ b/product.html
@@ -23,7 +23,8 @@
                 <li class="loop"><a href="product.html" target="_blank"><img src="img/loop.svg" alt="loop"></a></li>
             </ul>
             <ul class="iconright">
-                <li class="burger"><a href="index.html"><img src="img/menu.svg" alt="menu"></a>
+                <li class="burger">
+                    <div class="burger_trans"><a href="index.html"><img src="img/menu.svg" alt="menu"></a></div>
                     <div class="mega-box">
                         <div class="mega-item">
                             <h3 class="mega-heading">Menu</h3>
@@ -52,7 +53,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="personal"><a href="index.html"><img src="img/contact.svg" alt="contact"></a></li>
+                <li class="personal"><a href="registration.html"><img src="img/contact.svg" alt="contact"></a></li>
                 <li class="basket"><a href="cart.html" target="_blank"><img src="img/basket.svg" alt="basket"></a></li>
             </ul>
         </nav>
@@ -126,7 +127,7 @@
             </div>
             <div class="add_product_box">
                 <a class="add_product" href="">
-                    <img src="img/basket_pink.svg" alt="add">
+                    <i class="fa-solid fa-cart-shopping"></i>
                     <p class="product-txt">Add to Cart</p>
                 </a>
             </div>
