--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <li class="loop"><a href="product.html" target="_blank"><img src="img/loop.svg" alt="loop"></a></li>
             </ul>
             <ul class="iconright">
-                <li class="burger"><a href="index.html"><img src="img/menu.svg" alt="menu"></a>
+                <li class="burger">
+                    <div class="burger_trans"><a href="index.html"><img src="img/menu.svg" alt="menu"></a></div>
                     <div class="mega-box">
                         <div class="mega-item">
                             <h3 class="mega-heading">Menu</h3>
@@ -52,7 +53,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="personal"><a href="index.html"><img src="img/contact.svg" alt="contact"></a></li>
+                <li class="personal"><a href="registration.html"><img src="img/contact.svg" alt="contact"></a></li>
                 <li class="basket"><a href="cart.html" target="_blank"><img src="img/basket.svg" alt="basket"></a></li>
             </ul>
         </nav>
@@ -96,7 +97,7 @@
             <p class="feturedShop">Shop for items based on what we featured in this week</p>
             <div class="card-flex">
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-1.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -106,14 +107,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-2.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -123,14 +124,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-3.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -140,14 +141,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-4.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -157,14 +158,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-5.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -174,14 +175,14 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-6.png" alt="blue jacket">
                         <div class="text-box">
                             <p class="card-name">ELLERY X M'O CAPSULE</p>
@@ -191,16 +192,15 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a class="add" href="">
+                        <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
                             <p class="add-txt">Add to Cart</p>
                         </a>
                     </div>
                 </div>
-
             </div>
             <div class="browse_all-box">
-                <a class="browse_all" href="">
+                <a class="browse_all" href="#">
                     <p class="browse_all-txt">Browse All Product</p>
                 </a>
             </div>
@@ -210,7 +210,7 @@
         <div class="info container">
             <div class="info_container">
                 <article class="infoCards">
-                    <div><img src="img/delivery.svg" alt="delivery"></div>
+                    <div class="delivery delivery_car"><img src="img/delivery.svg" alt="delivery"></div>
                     <h3 class="textHeadingInfo">Free delivery</h3>
                     <p class="textInfo">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
                         tion
@@ -219,7 +219,7 @@
                     </p>
                 </article>
                 <article class="infoCards">
-                    <div><img src="img/sales.svg" alt="delivery"></div>
+                    <div class="delivery delivery_sales"><img src="img/sales.svg" alt="delivery"></div>
                     <h3 class="textHeadingInfo">Sales & discounts</h3>
                     <p class="textInfo">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
                         tion
@@ -228,7 +228,7 @@
                     </p>
                 </article>
                 <article class="infoCards">
-                    <div><img src="img/QA.svg" alt="delivery"></div>
+                    <div class="delivery delivery_QA"><img src="img/QA.svg" alt="delivery"></div>
                     <h3 class="textHeadingInfo">Quality assurance</h3>
                     <p class="textInfo">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
                         tion
