--- a/index.html
+++ b/index.html
@@ -70,28 +70,29 @@
         </div>
     </div>
     <div class="content">
-        <section class="content container">
+        <section class="wrapper content container">
             <div class="forPeople">
                 <div class="forWomen">
-                    <img src="img/forWomen.png" alt="forWomen">
+                    <div><img class="imgForWomen" src="img/forWomen.png" alt="forWomen"></div>
                     <p class="textMen">30% OFF <br> <span class="fashion">FOR WOMEN</span></p>
                 </div>
                 <div class="forMen">
-                    <img src="img/forMen.png" alt="forMen" style="width: 100%;">
+                    <div><img class="imgForWomen" src="img/forMen.png" alt="forMen"></div>
+
                     <p class="textMen">HOT DEAL <br> <span class="fashion">FOR MEN</span></p>
                 </div>
                 <div class="forKids">
-                    <img src="img/forKids.png" alt="forKids">
+                    <div><img class="imgForWomen" src="img/forKids.png" alt="forKids"></div>
                     <p class="textMen newArrivals">NEW ARRIVALS<br><span class="fashion">FOR KIDS</span></p>
                 </div>
             </div>
             <div class="accesories">
-                <img src="img/accesories.png" alt="accesories">
+                <div><img src="img/accesories.png" alt="accesories"></div>
                 <p class="textMen textAccesories">LUXERIOUS & TRENDY <br> <span class="fashion">ACCESORIES</span></p>
             </div>
         </section>
     </div>
-    <section class="cards_sec">
+    <section class="wrapper cards_sec">
         <div class="container">
             <h3 class="fetured">Fetured Items</h3>
             <p class="feturedShop">Shop for items based on what we featured in this week</p>
