--- a/catalog.html
+++ b/catalog.html
@@ -13,6 +13,7 @@
     <script src="https://kit.fontawesome.com/0021facf9c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 
+
 </head>
 
 <body>
@@ -330,7 +331,7 @@
         <div class="info container">
             <div class="info_container">
                 <article class="infoCards">
-                    <div><img src="img/delivery.svg" alt="delivery"></div>
+                    <div class="delivery delivery_car"><img src="img/delivery.svg" alt="delivery"></div>
                     <h3 class="textHeadingInfo">Free delivery</h3>
                     <p class="textInfo">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
                         tion
@@ -339,7 +340,7 @@
                     </p>
                 </article>
                 <article class="infoCards">
-                    <div><img src="img/sales.svg" alt="delivery"></div>
+                    <div class="delivery delivery_sales"><img src="img/sales.svg" alt="delivery"></div>
                     <h3 class="textHeadingInfo">Sales & discounts</h3>
                     <p class="textInfo">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
                         tion
@@ -348,7 +349,7 @@
                     </p>
                 </article>
                 <article class="infoCards">
-                    <div><img src="img/QA.svg" alt="delivery"></div>
+                    <div class="delivery delivery_QA"><img src="img/QA.svg" alt="delivery"></div>
                     <h3 class="textHeadingInfo">Quality assurance</h3>
                     <p class="textInfo">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
                         tion
@@ -391,8 +392,6 @@
             </div>
         </div>
     </div>
-
-
 
 </body>
 
